Add image detail lightbox with basic exif data and keyboard shortcuts

--- a/packages/pix-web/src/ui/index.less
+++ b/packages/pix-web/src/ui/index.less
@@ -2,3 +2,10 @@ form {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
