Simple add user form on admin page

--- a/packages/pix-web/src/index.css
+++ b/packages/pix-web/src/index.css
@@ -20,3 +20,11 @@ body, #root {
 .pt-popover:not(.pt-minimal) .pt-popover-content {
   padding: 20px;
 }
+
+a {
+  color: #f5f8fa !important;
+}
+
+table {
+  width: 100%;
+}
